Fix broken line wrapping in sunburst alignments.

--- a/trunk/PfamWeb/root/static/css/family.css
+++ b/trunk/PfamWeb/root/static/css/family.css
@@ -151,9 +151,6 @@ div.blockContent ol {
   width: 600px;
   font-family: monospace;
   overflow: hidden;
-}
-
-#alignmentData span {
   white-space: nowrap;
 }
 
